<resources>
    <string name="app_name">Gesture Launcher</string>
    <string name="title_gesture_main">Gesture Launcher</string>
    <string name="draw_your_pattern">Sketch your pattern</string>
    <string name="title_activity_main">Gesture Launcher</string>
    <string name="empty_lib">Gesture library is currently empty. Please synchronize it from your mobile device!</string>
    <string name="welcome_msg1">Greetings! \nTo commence using Wear Gesture Launcher, you must authorize draw-over permissions on the next page.</string>
    <string name="settings_open_instruction">To access Gesture Launcher, just tap any part of the %1$s on the screen, anywhere on the watch.</string>
    <string name="welcome_sure">Sure!</string>
    <string name="settings_show">Activate Quick Launcher</string>
    <string name="title_activity_all_gestures">All Gestures</string>
    <string name="title_activity_app_selector">App Selector</string>
    <string name="title_activity_add_gesture">Add Gesture</string>
    <string name="title_activity_add_confirm_gesture">Confirm Gesture Addition</string>
    <string name="title_activity_help">Assistance</string>
    <string name="title_activity_about">About</string>
    <string name="title_activity_about_page">About Page</string>
    <string name="menu_help"><![CDATA[Help & More]]></string>
    <string name="Version_Warning">You are currently using Android Wear 1.5 or an earlier version, which does not fully support tapping the screen edge to open. Instead, enter from the system launcher. Tip: Use a watch face with a shortcut to open the launcher more quickly!</string>
    <string name="main_click_perfrom_gesture">Tap here to execute a gesture</string>
    <string name="connection_phone_disconnect">Phone disconnected</string>
    <string name="main_quicklauncher_disabled_notice">Quick Launcher is disabled. You can add this app as a shortcut to open, or tap here to perform a gesture now.</string>
    <string name="main_settings">Settings</string>
    <string name="main_all_gestures">All gestures</string>
    <string name="main_add_a_gesture">Add a new gesture</string>
    <string name="settings_general">General</string>
    <string name="settings_show_quick_launcher">Display quick launcher</string>
    <string name="settings_vibration">Vibration</string>
    <string name="settings_quick_launcher_style">Quick Launcher style</string>
    <string name="settings_long_press_disable">Disable long press</string>
    <string name="settings_shorter_length">Shorter length</string>
    <string name="settings_wider_width">Wider width</string>
    <string name="settings_quick_launcher_location">Quick Launcher location</string>
    <string name="settings_right_edge">Right edge</string>
    <string name="settings_left_edge">Left edge</string>
    <string name="settings_top_edge">Top edge</string>
    <string name="settings_bottom_edge">Bottom edge</string>
    <string name="settings_gesture_recognition_accuracy">Gesture recognition accuracy</string>
    <string name="settings_restore_to_default">Restore to default</string>
    <string name="settings_clear_gestures">Clear gestures</string>
    <string name="settings_reload_gestures">Reload gestures</string>
    <string name="manage_gestures">Manage gestures</string>
    <string name="main_oreo_content">Received a notification about an overlay floater? You can disable it by long-pressing on the notification.</string>
    <string name="main_overlay_notif_title">Oreo overlay Notification</string>
    <string name="add_indicator_drawtoset">Sketch to set the pattern of action </string>
    <string name="confirm_collision_clear">- Collision check - \n Great! No similar gestures found</string>
    <string name="confirm_collision_similar">- Collision check - \n %1$s - Similarity %2$d%%</string>
    <string name="timer_new_alarm">New Alarm</string>
    <string name="timer_manage_alarms">Manage Alarms</string>
    <string name="timer_open_timer">Open Timer</string>
    <string name="timer_open_stopwatch">Open Stopwatch</string>
    <string name="main_deleted">Item deleted</string>
    <string name="dialog_delete_msg">Do you want to delete Gesture \'</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="back">Back</string>
    <string name="confirm">Confirm</string>
    <string name="action_launch_app">Launch App</string>
    <string name="action_timer_actions">Timer Actions</string>
    <string name="choose_an_action">Select an action to continue</string>
    <string name="confirm_cofirm_notice">Confirm to add this gesture?</string>
    <string name="gesture_saved">Gesture Successfully Saved!</string>
    <string name="settings_changes_saved">Changes saved</string>
    <string name="action_mobile_notice">You can use the mobile app to add Tasker and mobile app actions</string>
    <string name="skip">Skip</string>
    <string name="help_t_how_to_uese">How to use?</string>
    <string name="help_part1">At any time on the watch screen:</string>
    <string name="help_part2">· Tap the edge to open gesture launcher \n· Long-press to disable \n· Open from the system launcher to re-enable</string>
    <string name="help_t_accuracy">How to enhance gesture recognition accuracy?</string>
    <string name="help_part3">Gesture recognition is based on strokes and turns. While matching, drawing it with the same order will help recognition. Avoid using overly simplified gestures (e.g., a curve).</string>
    <string name="help_use_mobile">Utilize the mobile app</string>
    <string name="help_part4">Use the mobile app to access more gesture options! (Android Only)</string>
    <string name="help_b_get_on_phone">Get it on your phone</string>
    <string name="help_t_about">About</string>
    <string name="help_part5">Thank you for using! \nIf you encounter any issues or have suggestions, please email me at \nhenryzhang9802@gmail.com \n\nSpecial thanks to Thomas, Joerg Dietz, and Natalia</string>
    <string name="help_t_rate_us">Rate us</string>
    <string name="help_part6">This app is completely free. Your best support is to take a moment and rate it on the Google Play Store!</string>
    <string name="help_b_rate">Rate the App!</string>
    <string name="app_select_all_item">You have created all items in this section!</string>
    <string name="welcome_begin">Finished? Let\'s begin! To help you start, we\'ve added some popular gestures. You can see them on the next page.</string>
    <string name="welcome_not_grant">You haven\'t granted permission; the quick launcher will be unavailable. You can change it later in the settings. To help you start, we\'ve added some popular gestures. You can see them on the next page!</string>
    <string name="floater_disabled">Quick Launcher disabled</string>
    <string name="gesture_matching">Matching...</string>
    <string name="gesture_sth_performed">%s executed!</string>
    <string name="gesture_no_match">No match</string>
    <string name="gesture_open_main">Opening Main screen</string>
    <string name="gesture_opening">Opening %s</string>
    <string name="gesture_open_phone">Opening %s on your phone...</string>
    <string name="gesture_failed">Failed to open</string>
    <string name="help_phone_disc">Phone disconnected</string>
    <string name="settings_reload_warn">This will reload the initial gestures based on your installed apps. All your current gestures *will* be overwritten. Continue?</string>
    <string name="version_warn">\n\nWear Gesture Launcher\nMobile app %1$d\nWear app %2$d\nVersion inconsistency. Please update your apps to ensure proper synchronization.</string>
    <string name="lib_synced">Gesture Library Synchronized!</string>
    <string name="connection_ini">Connection Initiated!</string>
    <string name="connect_fail_code">Failed to send action:</string>
    <string name="connect_action_sent">Action Sent!</string>
    <string name="connect_connection_failed">Connection failed</string>
    <string name="settings_delay">Delay action</string>
</resources>
